tweaks awkward spacing on profile, fixes footer compare link

--- a/src/components/user-profile/profile.scss
+++ b/src/components/user-profile/profile.scss
@@ -476,7 +476,7 @@
 
         button{
             border: none;
-            margin-top: 5px;
+            margin-top: 10px;
             width: 130px;
             border-radius: 5px;
             font-size: 1.1rem;
@@ -501,7 +501,7 @@
     }
         }
         h2 {
-            margin-bottom: 1px;
+            margin: 0;
             @media screen and (max-width:900px){
                 margin-bottom: 5px;
                 margin-top: 1px;
